--- a/AdminService/src/main/resources/application.properties
+++ b/AdminService/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=AdminService
+spring.data.mongodb.uri=mongodb+srv://yoyo:yoyo123@admincluster.2eaglmq.mongodb.net/?retryWrites=true&w=majority&appName=AdminCluster
