--- a/SearchService/src/main/resources/application.properties
+++ b/SearchService/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=SearchService
+# Server configuration
+server.port=8082
+spring.application.name=search-service
+
+# Feign client configuration
+admin-product.ribbon.listOfServers=http://localhost:8083
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=5000
+
+# Redis configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=3600000
+spring.cache.redis.cache-null-values=false
+
+# Logging
+logging.level.com.example.SearchService=INFO
+logging.level.com.example.SearchService.client=DEBUG
