user service fixes and docker-compose

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8081
 spring.application.name=user-service
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/walmart
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate properties
