--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=TransactionService
+spring.datasource.url=jdbc:postgresql://postgres:5432/transactions_db
+spring.datasource.username=tx_user
+spring.datasource.password=tx_pw
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+
+server.port=8080
+
