UserService: fixed email sending, everything now working

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -26,7 +26,14 @@ jwt.expiration=86400000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=aclprojectwalmart@gmail.com
-spring.mail.password=Aclproject123
+# Note: For Gmail, you need to use an App Password, not your regular password
+# To create an App Password:
+# 1. Enable 2-Step Verification on your Google account
+# 2. Go to https://myaccount.google.com/apppasswords
+# 3. Generate a new App Password for this application
+# 4. Replace the value below with the generated App Password
+# spring.mail.password=Aclproject123
+spring.mail.password=vqmr epfy jkqh cjlh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
