--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       POSTGRES_DB: walmart
     ports:
       - "5432:5432"
+    # restart: always
   redis:
     image: redis:latest
     container_name: redis
