--- a/SearchService/src/main/resources/application.properties
+++ b/SearchService/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8082
 spring.application.name=search-service
 
 # Feign client configuration
-admin-product.ribbon.listOfServers=http://localhost:8083
+spring.cloud.loadbalancer.ribbon.enabled=false
+admin-product.url=http://localhost:8084
 feign.client.config.default.connectTimeout=5000
 feign.client.config.default.readTimeout=5000
 
