Communication Products Done

--- a/TransactionService/pom.xml
+++ b/TransactionService/pom.xml
@@ -62,6 +62,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<!-- Lombok (compile-time) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
