--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -20,9 +20,22 @@ feign.client.config.default.readTimeout=5000
 # UserService base URL (for @FeignClient)
 user.service.url=http://localhost:8081
 
+# AdminService base URL (for @FeignClient)
+admin.service.url=http://localhost:8084
+
 # Disable the Spring Cloud / Spring Boot compatibility checker
 spring.cloud.compatibility-verifier.enabled=false
 
-
 # (Optional) Enable DEBUG logging for your Feign client
 logging.level.com.example.TransactionService.client=DEBUG
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# RabbitMQ Exchange and Queue names
+rabbitmq.exchange.name=ecommerce_exchange
+rabbitmq.queue.stock-update=stock_update_queue
+rabbitmq.routing.key.stock-update=stock.update
