--- a/AdminService/src/main/resources/application.properties
+++ b/AdminService/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# RabbitMQ Queue, Exchange and Routing Key settings
+rabbitmq.queue.stock-update=stock_update_queue
+rabbitmq.exchange.name=stock-exchange
+rabbitmq.routing.key.stock-update=stock.update
+rabbitmq.queue.refund=refund_queue
+rabbitmq.routing.key.refund=refund.update
