--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -39,3 +39,5 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange.name=ecommerce_exchange
 rabbitmq.queue.stock-update=stock_update_queue
 rabbitmq.routing.key.stock-update=stock.update
+rabbitmq.queue.refund=refund_queue
+rabbitmq.routing.key.refund=refund.update
