--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.jpa.open-in-view=false
 # Embedded server port (inside container)
 server.port=8082
 
+# Allow bean definition overriding
+spring.main.allow-bean-definition-overriding=true
+
 # OpenFeign default timeouts (in milliseconds)
 feign.client.config.default.connectTimeout=5000
 feign.client.config.default.readTimeout=5000
