--- a/AdminService/src/main/resources/application.properties
+++ b/AdminService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server configuration
 server.port=8084
-spring.application.name=AdminService
+spring.application.name=admin-service
 #spring.data.mongodb.uri=mongodb+srv://yoyo:yoyo123@admincluster.2eaglmq.mongodb.net/admindb?retryWrites=true&w=majority&appName=AdminCluster&ssl=true&tlsAllowInvalidCertificates=true
 spring.data.mongodb.uri=mongodb+srv://rawanelashmawyy:user1Database@admincluster.a3mejpp.mongodb.net/admindb?retryWrites=true&w=majority&appName=AdminCluster
 # JWT Configuration
