--- a/TransactionService/src/main/resources/application.properties
+++ b/TransactionService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application name
-spring.application.name=TransactionService
+spring.application.name=transaction-service
 
 # DataSource (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/transactions_db
