--- a/k8s/admin/admin-deployment.yaml
+++ b/k8s/admin/admin-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: admin-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: admin-service
@@ -12,11 +12,39 @@ spec:
       labels:
         app: admin-service
     spec:
+      initContainers:
+      - name: init-mongo
+        image: mongo:latest
+        command: 
+        - /bin/bash
+        - -c
+        - |
+          set -e
+          mongosh "$MONGO_URI" --eval '
+          db = db.getSiblingDB("admindb");
+          const existingAdmin = db.admins.findOne({username: "firstadmin"});
+          if (!existingAdmin) {
+            db.admins.insertOne({
+              username: "firstadmin",
+              password: "$2a$10$n/5spLdLiZbaMjR1YJX4pe5FMykGITeL.ztzGlwJiKs6A5DkPvOAe",
+              email: "firstadmin@gmail.com"
+            });
+            print("Admin user inserted successfully");
+          } else {
+            print("Admin user already exists");
+          }
+          '
+        env:
+        - name: MONGO_URI
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret
+              key: URI
       containers:
         - name: admin-service
-          image: seifelfayoumy/admin
+          image: seifelfayoumy/admin:2.0
           ports:
-            - containerPort: 8080
+            - containerPort: 8084
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
@@ -26,7 +54,7 @@ spec:
                   name: mongo-secret
                   key: URI
             - name: SPRING_DATA_MONGODB_DATABASE
-              value: notification_db
+              value: admindb
             - name: SPRING_RABBITMQ_HOST
               value: rabbitmq
             - name: SPRING_RABBITMQ_PORT
