--- a/k8s/apigateway/apigateway-deployment.yaml
+++ b/k8s/apigateway/apigateway-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: apigateway-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: apigateway-service
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: apigateway-service
-          image: seifelfayoumy/apigateway
+          image: seifelfayoumy/apigateway:1.0
           ports:
             - containerPort: 8080
           env:
