fix in connection url in transaction

--- a/k8s/transaction/transaction-deployment.yaml
+++ b/k8s/transaction/transaction-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://postgres-transaction-0.postgres-transaction:5432/transactions_db
+              value: jdbc:postgresql://postgres-transaction:5432/transactions_db
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
