fixes in routing apigateway

--- a/k8s/apigateway/apigateway-deployment.yaml
+++ b/k8s/apigateway/apigateway-deployment.yaml
@@ -39,9 +39,11 @@ spec:
             - name: SPRING_CLOUD_GATEWAY_ROUTES_2_ID
               value: transaction-service
             - name: SPRING_CLOUD_GATEWAY_ROUTES_2_URI
-              value: http://transaction-service:8082/api/transactions
+              value: http://transaction-service:8082
             - name: SPRING_CLOUD_GATEWAY_ROUTES_2_PREDICATES_0
               value: Path=/api/orders/**
+            - name: SPRING_CLOUD_GATEWAY_ROUTES_2_FILTERS_0
+              value: RewritePath=/api/orders/(?<segment>.*), /api/transactions/$\{segment}
 
             - name: SPRING_CLOUD_GATEWAY_ROUTES_3_ID
               value: admin-service-admins
