--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -24,9 +24,11 @@ spring:
 
         # ─── Transaction (Order) Service ─────────────────────────────────
         - id: transaction-service
-          uri: http://localhost:8082/api/transactions
+          uri: http://localhost:8082
           predicates:
             - Path=/api/orders/**
+          filters:
+            - RewritePath=/api/orders/(?<segment>.*), /api/transactions/$\{segment}
 
         # ─── Admin Service ──────────────────────────────────────────────
         - id: admin-service-admins
