fixes in /api/order git add .git add .

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
           predicates:
             - Path=/api/orders/**
           filters:
+            - RewritePath=/api/orders$, /api/transactions
             - RewritePath=/api/orders/(?<segment>.*), /api/transactions/$\{segment}
 
         # ─── Admin Service ──────────────────────────────────────────────
