--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,18 +19,18 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up JDK 23
+    - name: Set up JDK 25
       uses: actions/setup-java@v3
       with:
-        java-version: '23'
-        distribution: 'temurin'
+        java-version: '25-ea'
+        distribution: 'oracle'
         cache: maven
 
     - name: Build and Test ${{ matrix.service }}
       working-directory: ./${{ matrix.service }}
       run: |
-        mvn clean install -DskipTests
-        
+        mvn clean package -DskipTests
+        mvn verify
 
   docker-build-push:
     needs: build-and-test
@@ -39,9 +39,20 @@ jobs:
     strategy:
       matrix:
         service: [AdminService, UserService, TransactionService, SearchService, apigateway]
-
+    
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set up JDK 25
+      uses: actions/setup-java@v3
+      with:
+        java-version: '25-ea'
+        distribution: 'oracle'
+        cache: maven
+
+    - name: Build with Maven
+      working-directory: ./${{ matrix.service }}
+      run: mvn clean package -DskipTests
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -67,6 +78,8 @@ jobs:
           ${{ env.DOCKER_USERNAME }}/${{ env.SERVICE_LOWERCASE }}:${{ github.sha }}
         cache-from: type=registry,ref=${{ env.DOCKER_USERNAME }}/${{ env.SERVICE_LOWERCASE }}:buildcache
         cache-to: type=registry,ref=${{ env.DOCKER_USERNAME }}/${{ env.SERVICE_LOWERCASE }}:buildcache,mode=max
+        build-args: |
+          JAVA_VERSION=25-ea
 
   deploy:
     needs: docker-build-push
